kafka发的消息固定到分区0以避免顺序错误